Fix guide list style on mobile
This commit fixes style definitions for guide containers and let them
take the whole horizontal space on mobile devices for better
readability.

Appropriate style rules were already present but did were overridden by
the ones for desktop clients.

Fixes #548

--- a/sagan-client/src/css/responsive.css
+++ b/sagan-client/src/css/responsive.css
@@ -437,14 +437,14 @@
     display: none;
   }
 
-  .guides-section--container {
+  body .guides-section--container {
     margin-top: 0;
   }
-  .guides-section--container .guide--container {
+
+  body .guides-section--container .guide--container {
     display: block;
-    margin: 0;
     width: auto;
-    margin-bottom: 20px;
+    margin: 0 0 20px;
   }
 
   .project--container {
